gave fixed-widths to side buttons, applied z-indexes to img container and norris container, repositioned form and brand

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,32 @@
 /* CSS TODO List:  */
 /*  */
 
+/* toggle outlines on and off to see where each table is positioned */
+/* by toggle, i mean comment in and out */
 * {
     /* outline: 1px dashed blue;    */
-    outline: 2px solid red;   
+    /* outline: 2px solid red;    */
 }
 
+/* to make sure background color fills up the entire page. Found out that bulma uses some properties that disallows this by default */
+html,
 body {
-    outline: 2px solid chartreuse;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(179, 179, 179);
 }
 
-main {
-    outline: 2px solid teal;  
-    /* margin-top: 200px; */
-}
 
 #search {
-    margin: auto;
-    outline: 2px solid peru;
+    margin-left: -47px;
+    /* outline: 2px solid peru; */
 }
 
+#brand {
+    margin-left: 47px;
+    margin-top: -50px;
+    transform: rotate(-30deg);
+}
 #brand, #empty-right {
     flex: 1;
 }
@@ -29,9 +36,27 @@ main {
 }
 
 .side-btn {
-    width: 20%;
+    width: 120px;
+    font-size: 80%;
+    text-align: center;
+    white-space: normal;
 }
 
+#img-container {
+    z-index: 1;
+    margin-top: -30px;
+    background-color: transparent;
+}
+
+#norris-container {
+    z-index: 2;
+    height: 40%;
+    position: relative;
+}
+
+#norris-fact {
+    background-color: rgba(141, 255, 236, 0.5);
+}
 /* #btn-format {
     outline: 2px solid peru;
 } */
